tests/data/ValidCase/src/Context/Application/ValidCommand.php
<?php declare(strict_types=1);

namespace Tests\ValidCase\Context\Application;

final class ValidCommand implements \Mage\Bus\Command {}
